fixed margins and spacing on index
removed gutters, fixed padding between the images

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ h2, h3, h4, h5, h6{
 }
 
 
+
 .logo{
 
     max-height: 40px;
@@ -38,7 +39,7 @@ h2, h3, h4, h5, h6{
 .hero-square{
     background-color:#F8F4F1;
     color:#035752;
-    padding: 80px 80px;}
+    padding: 50px 90px;}
 
     
 .IG-link{
